@@ -1,3 +1,8 @@
+2009-09-16  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* slime-references.el: Largely refactored: decoupled code from
+	SLDB; add references to the compilation log.
+
 2009-09-15  Stas Boukarev  <stassats@gmail.com>
 
 	* slime-autodoc.el (slime-fontify-string): setup *slime-fontify*
